--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <div class="tab-pane active" id="web-development">
         <div class="ml-auto mr-auto">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
                     <figcaption>
@@ -198,7 +198,7 @@
           <div class="card-body">
             <div class="h5">Bachelor of Technology in Computer Science</div>
             <p class="category">Aditya Collage of Engineering And Technology</p>
-            <p></p>
+            <p><b>Persentage:</b>68%</p>
           </div>
         </div>
       </div>
@@ -207,15 +207,15 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2007 - 2009</p>
-            <div class="h5">High School</div>
+            <p>2016 - 2018</p>
+            <div class="h5">Intermediate</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Science and Mathematics</div>
-            <p class="category">School of Secondary board</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">MPC(Maths, Physics, Chemistry)</div>
+            <p class="category">Aditya Juniour Collage</p>
+            <p><b>Persentage:</b> 73%</p>
           </div>
         </div>
       </div>
@@ -274,11 +274,11 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">140, City Center, New York, U.S.A</p>
+                    <p class="pb-2">23-7-20, 201-Bhanu Appartment, Duggiralavari Street, Near TTD, Kakinada-533001</p>
                     <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+1718-111-0011</p>
+                    <p class="pb-2">+918712120481</p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>anthony@company.com</p>
+                    <p>dittakaviganesh@gmil.com</p>
                   </div>
                 </div>
               </div>
